5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4422/executions/1758_1580.log
== TEST (2019-05-28 10:38:02) 
-- CODE:
v = array(eval(input("nota: ")))
x = int(input("nome: "))

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i]==-1):
		f = f + 1
	elif(v[i]>=6):
		a = a + 1
	elif(v[i]<6):
		r = r + 1
med = sum(notas) / size(notas)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max[x]):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:38:20) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = int(input("nome: "))

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i]==-1):
		f = f + 1
	elif(v[i]>=6):
		a = a + 1
	elif(v[i]<6):
		r = r + 1
med = sum(notas) / size(notas)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max[x]):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:00) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i]==-1):
		f = f + 1
	elif(v[i]>=6):
		a = a + 1
	elif(v[i]<6):
		r = r + 1
med = sum(notas) / size(notas)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max[x]):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:39:31) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i]==-1):
		f = f + 1
	elif(v[i]>=6):
		a = a + 1
	elif(v[i]<6):
		r = r + 1
med = sum(v) / size(v)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max[x]):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:35) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i]==-1):
		f = f + 1
	elif(v[i]>=6):
		a = a + 1
	elif(v[i]<6):
		r = r + 1
med = sum(v) / size(v)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max(x):
	i = i + 1
print(x[i])

		
-- ERROR:
File "XXXX", line 22
    while(x[i] != max(x):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:40:41) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i]==-1):
		f = f + 1
	elif(v[i]>=6):
		a = a + 1
	elif(v[i]<6):
		r = r + 1
med = sum(v) / size(v)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max(x)):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:42:26) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i] == -1):
		f = f + 1
	elif(v[i] >= 6):
		a = a + 1
	elif(v[i] < 6):
		r = r + 1
med = sum(v) / size(v)
print(f)
print(a)
print(r)
print(round(med, 2))
while(x[i] != max(x)):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:43:29) 
-- CODE:
from numpy import*
v = array(eval(input("nota: ")))
x = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(v)==size(x)):
	if(v[i] == -1):
		f = f + 1
		print(f)
	elif(v[i] >= 6):
		a = a + 1
		print(a)
	elif(v[i] < 6):
		r = r + 1
		print(r)
med = sum(v) / size(v)
print(round(med, 2))
while(x[i] != max(x)):
	i = i + 1
print(x[i])

		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:20) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(notas) == size(nome)):
	if(notas[i] == -1):
	f = f + 1
	elif(notas[i] >= 6):
	a = a + 1
	elif(notas[i] < 6):
	r = r + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))

while (nota[i] != max(nota)):
i = i + 1
print(nome[i])
-- ERROR:
File "XXXX", line 12
    f = f + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:27) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(notas) == size(nome)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))

while (nota[i] != max(nota)):
i = i + 1
print(nome[i])
-- ERROR:
File "XXXX", line 24
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:37) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(notas) == size(nome)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))

i = 0
while (nota[i] != max(nota)):
i = i + 1
print(nome[i])
-- ERROR:
File "XXXX", line 25
    i = i + 1
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:04:55) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(notas) == size(nome)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))


while (nota[i] != max(nota)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:05:23) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

i = 0
f = 0
a = 0
r = 0

while(size(notas) == size(nome)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6):
		r = r + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:22:18) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:23:02) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = sum(notas) / size(notas)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:25) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:24:54) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:26) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = input("nome: ")

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:25:50) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:26:53) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1:
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
File "XXXX", line 16
    elif(notas[i] < 6 and notas[i] != -1:
                                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:08) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:27:30) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:28:25) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

i = 0
f = 0
a = 0
r = 0
s = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:29:46) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

i = 0
f = 0
a = 0
r = 0
soma = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 11:30:22) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

i = 0
f = 0
a = 0
r = 0
soma = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))


while (notas[i] != max(notas)):
	i = i + 1
print(nome[i])
-- EXECUTION TIME:
0.602012
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1758/1580/main.py", line 31, in <module>
    while (notas[i] != max(notas)):
IndexError: index 12 is out of bounds for axis 0 with size 12

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 11:31:05) 
-- CODE:
from numpy import*
notas = array(eval(input("Informe as notas: ")))
nome = array(eval(input("nome: ")))

i = 0
f = 0
a = 0
r = 0
soma = 0
m = -1

while(i < size(notas)):
	if(notas[i] == -1):
		f = f + 1
	elif(notas[i] >= 6):
		a = a + 1
	elif(notas[i] < 6 and notas[i] != -1):
		r = r + 1
	if notas[i] != -1:
		soma = soma + notas[i]
	if notas[i] == max(notas):
		maior = i
	i = i + 1
print(f)
print(a)
print(r)
med = soma / (size(notas) - f)
print(round(med, 2))
print(maior(nome))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
